--- a/src/components/pages/TicTacToe.css
+++ b/src/components/pages/TicTacToe.css
@@ -1,4 +1,4 @@
-/* TicTacToe.css */
+/* Board Styles */
 
 .container {
   background-color: #273377;
@@ -22,6 +22,8 @@
   justify-items: center;
 }
 
+/* Box Styles */
+
 .box {
   background-color: #606dbb;
   width: 100%;
@@ -34,22 +36,43 @@
   border-radius: 8px;
 }
 
+/* Reset Button Styles */
+
 .reset-button {
-  width: 80px;
-  height: 40px;
+  width: 100px;
+  height: 60px;
   border: none;
   outline: none;
   cursor: pointer;
   border-radius: 8px;
   background-color: #606dbb;
   color: hsl(0, 0%, 100%);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 22px;
   margin-top: 20px;
-  text-transform: uppercase;
 }
 
 .reset-button:hover {
-  width: 75px;
-  height: 35px;
   background-color: #4856a0;
+}
+
+/* Winner Message Styles */
+
+.winner-message {
+  background-color: #606dbb;
+  padding: 16px;
+  border-radius: 8px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.winner-text {
+  color: #fff;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 22px;
+  margin: 0;
+}
+
+.hidden {
+  display: none;
 }
